# rcgp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  justfile  main.cpp  ugp.hpp
.github/workflows/: ci.yml
include/: rcgp-dsl.hpp  rcgp-meta.hpp  rcgp-rhi.hpp  rcgp.hpp  ugp.hpp
include/dsl/: README.md  aliases.hpp  arithmetic.hpp  array.hpp  block.hpp  enumerations.hpp  generate_enumeration_strings.py  generate_instantiations.py  generate_instruction_enums.py  generate_macro_swizzle.py  generators_assembly.hpp  generators_glsl.hpp  instruction_block.hpp  instruction_enums.hpp  instruction_nodes.hpp  instruction_resources.hpp  instruction_types.hpp  instructions.hpp  intrinsics.hpp  jems.hpp  local.hpp  looping.hpp  macro_swizzle.hpp  matrix.hpp  optimization.hpp  optimizer.hpp  primitive_of.hpp  primitives.hpp  primitives_concepts.hpp  projection.hpp  scalar.hpp  tracer.hpp  vector.hpp  vector_base.hpp
include/dsl/generators/: assembly.hpp  glsl.hpp
include/meta/: attribute_description.hpp  barrier.hpp  binding_description.hpp  coerce_to_handle.hpp  collect_gvrs.hpp  collect_streams.hpp  combinators.hpp  command_effects.hpp  command_normalization.hpp  command_stream.hpp  commands.hpp  concepts.hpp  context.hpp  contract_configuration.hpp  descriptor.hpp  directives.hpp  dynamic.hpp  expand_reflection.hpp  field_access.hpp  field_name_injection.hpp  function_construction.hpp  function_return_injection.hpp  group_allocation.hpp  implicit_context.hpp  index_buffer.hpp  inject_arguments.hpp  inject_reference.hpp  injection_state.hpp  injector.hpp  input_assembly.hpp  interface_validation.hpp  intrinsics_common.hpp  intrinsics_compute.hpp  intrinsics_mesh.hpp  intrinsics_raytracing.hpp  intrinsics_vertex.hpp  layouts.hpp  macro_hell.hpp  mirror.hpp  mirror_buffer.hpp  (+41 more)
include/meta/combinator/: mesh_shading.hpp  rasterization.hpp
include/meta/commands/: command_effects.hpp  commands.hpp  directives.hpp  pipeline_mappings.hpp
include/meta/layout/: all.hpp  pod.hpp  scalar.hpp  std430.hpp
include/meta/pipeline/: mesh_shading.hpp  rasterization.hpp
include/msv/: README.md  alignment.hpp  field_name_injection.hpp  inject_arguments.hpp  meta.hpp  parameter_block_filter.hpp  reconstruct_type.hpp  reference.hpp  reflection.hpp  resources.hpp  return_handler.hpp  scaffold.hpp  stage.hpp  stage_argument_injector.hpp  stage_intrinsics.hpp  this_injection.hpp  type_string_extensions.hpp
include/msv/layout/: common.hpp  layout.hpp  std430.hpp
include/rhi/: buffer.hpp  command_buffer.hpp  command_pool.hpp  compiler.hpp  descriptor_pool.hpp  device.hpp  glfw.hpp  group.hpp  image.hpp  pipelines.hpp  presentation_synchronizer.hpp  queue.hpp  render_pass.hpp  renderpass.hpp  sbt.hpp  session.hpp  shader_compiler.hpp  timestamp_pool.hpp  tuple_buffer.hpp  vk.hpp  window.hpp  xlas.hpp
include/rhi/pipelines/: rasterization.hpp  traditional.hpp
include/scripts/: generate_enumeration_strings.py  generate_instantiations.py  generate_macro_swizzle.py
include/util/: align.hpp  array.hpp  cti.hpp  dynamic_tuple.hpp  error.hpp  logging.hpp  meta.hpp  sequence.hpp  timer.hpp  tlist.hpp  trivial_tuple.hpp  variant.hpp
samples/: deferred.cpp  prototype.cpp  rasterization.cpp  traditional.cpp
samples/util/: aperature.hpp  transform.hpp
scripts/: run_tests.py
source/dsl/: block.cpp  branching.cpp  generators_assembly.cpp  generators_glsl.cpp  instruction_repr.cpp  instructions.cpp  jems.cpp  looping.cpp  optimize.cpp  optimize_type.cpp  optimizer.cpp  tracer.cpp
source/rhi/: buffer.cpp  command_buffer.cpp  command_pool.cpp  compiler.cpp  descriptor_pool.cpp  device.cpp  glfw.cpp  image.cpp  pipeline.cpp  presentation_synchronizer.cpp  queue.cpp  render_pass.cpp  sbt.cpp  session.cpp  shader_compiler.cpp  timestamp_pool.cpp  window.cpp  xlas.cpp
source/rhi/pipelines/: rasterization.cpp  traditional.cpp
source/test/: main.cpp
source/test/compile/: command_missing_index_buffer.cpp  command_missing_vertex_buffers.cpp  fragment_attribute_stream.cpp  fragment_uses_taskpayload.cpp  fragment_uses_workgroup.cpp  vertex_fragment_interface_count_mismatch.cpp  vertex_fragment_interface_mismatch.cpp
source/test/dsl/: recording.cpp  recording_match.cpp
source/test/mirror/: scalar.cpp  std430.cpp
source/util/: error.cpp  logging.cpp  timer.cpp
tests/: experimental.cpp
tests/compile/: check_compile_fail.py
tests/compile/command_modules/: branch.cpp  branch.stderr  compute.cpp  compute.stderr  deferred.cpp  deferred.stderr  dep_missing_format.cpp  dep_missing_format.stderr  mesh_shading.cpp  mesh_shading.stderr  pipeline_kind.stderr  rasterization.cpp  rasterization.stderr  raytracing.cpp  raytracing.stderr
tests/compile/shader_modules/: compute_combinator.stderr  io_mismatch_format.cpp  io_mismatch_format.stderr  mesh_shading_combinator.stderr  rasterization_combinator.stderr  raytracing_combinator.stderr  subroutine_call.cpp  subroutine_call.stderr  traced_params.stderr
tests/dsl/: common.cpp  common.hpp  common_resources.hpp  compilation.cpp  glsl.cpp  main.cpp  optimization.cpp  recording.cpp  recording_verbose.cpp  resolves.cpp  tracing.cpp
tests/dsl/glsl/: array_length_sized.glsl  fr_diffuse_lighting.glsl  ms_meshlets.glsl  rt_multi_chit_radiance.glsl  rt_multi_rgen.glsl  rt_single_rgen.glsl  sr_branching.glsl  sr_dependencies.glsl  sr_invocation.glsl  struct_namespace_template_sanitization.glsl  struct_type_sorting.glsl  ts_meshlets.glsl  vs_push_constant.glsl
tests/dsl/optimization/: fr_diffuse_lighting.glsl  fr_diffuse_lighting_readable.glsl  ms_meshlets.glsl  ms_meshlets_readable.glsl  rt_multi_chit_radiance.glsl  rt_multi_rgen.glsl  rt_single_rgen.glsl  sr_branching.glsl  sr_dependencies.glsl  sr_invocation.glsl  ts_meshlets.glsl  ts_meshlets_readable.glsl  vs_push_constant.glsl
tests/scaffold/: resources.cpp  scalar.cpp  std430.cpp
ugp/: field_name_injection.hpp  macro_hell.hpp  primitives.hpp  reflection.hpp  stage_intrinsics.hpp  static_string.hpp  type_string_extensions.hpp
ugp/dsl/: instructions.hpp  primitives.hpp
ugp/dsl/generators/: assembly.hpp
(+7 files in other folders)
